2024.1/docs/source/docs/platform/docs/revision_history.md
<table class="sphinxhide">
 <tr>
   <td align="center"><img src="https://raw.githubusercontent.com/Xilinx/Image-Collateral/main/xilinx-logo.png" width="30%"/><h1> ZCU670 Evaluation Kit Tutorial</h1>
   </td>
 </tr>
 <tr>
 <td align="center"><h1>Known Issues and Limitations</h1>

 </td>
 </tr>
</table>

Revision History
================
## 2024.1 Release

* 2 x 25G
* 2 x 10G
* Added Synchronous Ethernet (SyncE) support
* Added pcm4l support 
* Unicast PTP packet support
* Conformance test report
* Updated ptp4l package to 4.3 version
* Reduced the MCDMA channels from 16 to 1 to minimize resource utilization
* Resource utilization graph is updated.


## 2023.2 Release

* Plain Upgrade

## 2023.1 Release

* Recovered clock logic is added to the design to support syncE.
* Enabled XXV MAC User Register to reset GT QPLL.
* In the axi_dma_hier, axis_rxd_fifo and axis_txd_fifo depths are reduced to 8K to minimize Resource Utilization.
* Resource utilization graph is updated.

## 2022.2 Release

* First Release 

**License**

Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License.

You may obtain a copy of the License at
[http://www.apache.org/licenses/LICENSE-2.0](http://www.apache.org/licenses/LICENSE-2.0)


Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.

<p align="center"> Copyright © 2024 Advanced Micro Devices, Inc </p>
